--- a/android/app/src/main/res/menu/main_screen_menu.xml
+++ b/android/app/src/main/res/menu/main_screen_menu.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- TODO Should extend and show two options in the future, one to create and another to add an existing list -->
     <item
         android:id="@+id/action_addList"
         android:icon="@drawable/ic_add"
