--- a/android/app/src/main/res/layout/product_item.xml
+++ b/android/app/src/main/res/layout/product_item.xml
@@ -23,9 +23,9 @@
 
         <ImageView
             android:id="@+id/itemImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/ic_baseline_fastfood_24" />
 
         <TextView
             android:id="@+id/itemName"
