Main screen now showing the available lists

--- a/android/app/src/main/res/layout/list_of_lists_item.xml
+++ b/android/app/src/main/res/layout/list_of_lists_item.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/listItemLinearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="30dp"
-    android:paddingTop="10dp"
-    android:paddingRight="30dp"
-    android:paddingBottom="10dp"
-    android:textSize="30sp"
-    tools:text="ListItem">
+    android:layout_height="100dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingLeft="16dp"
+    android:paddingTop="8dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-</TextView>
+    <TextView
+        android:id="@+id/listName_textView"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="10dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:textSize="30sp"
+        tools:text="ListItem" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:background="@null"
+        android:contentDescription="@string/list_options"
+        android:src="@drawable/ic_baseline_more_horiz_24" />
+</LinearLayout>
