Pantry List Base and some main screen updates

--- a/android/app/src/main/res/layout/list_of_lists_item.xml
+++ b/android/app/src/main/res/layout/list_of_lists_item.xml
@@ -28,6 +28,7 @@
         tools:text="ListItem" />
 
     <ImageButton
+        android:id="@+id/list_options_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
