Some fixes to create skeleton for upcoming updates

--- a/android/app/src/main/res/layout/activity_pantry.xml
+++ b/android/app/src/main/res/layout/activity_pantry.xml
@@ -18,7 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/pantry_screen_menu">
 
         <TextView
             android:id="@+id/pantry_list_title"
@@ -32,4 +33,13 @@
             tools:text="Title" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pantry_prod_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pantry_toolbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
