--- a/android/app/src/main/res/layout/dialog_product_creation.xml
+++ b/android/app/src/main/res/layout/dialog_product_creation.xml
@@ -11,17 +11,18 @@
         android:id="@+id/create_product_image"
         android:layout_width="match_parent"
         android:layout_height="146dp"
+        android:adjustViewBounds="true"
         android:src="@drawable/ic_baseline_image_24"
-        android:adjustViewBounds="true">
-    </ImageView>
+        android:visibility="gone"></ImageView>
 
     <Button
         android:id="@+id/create_product_insert_image_button"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:text="Insert image"
-        android:textSize="10sp"></Button>
+        android:text="@string/insert_image"
+        android:textSize="10sp"
+        android:visibility="gone"></Button>
 
     <EditText
         android:id="@+id/product_name"
