--- a/android/app/src/main/res/menu/add_products_screen_menu.xml
+++ b/android/app/src/main/res/menu/add_products_screen_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/add_products"
+    <item android:id="@+id/new_product"
         android:icon="@drawable/ic_add"
-        android:onClick="addProducts"
-        android:title="@string/add_product"
+        android:onClick="createProduct"
+        android:title="@string/new_product"
         app:showAsAction="ifRoom"/>
 
     <!--
