--- a/android/app/src/main/res/layout/activity_add_products.xml
+++ b/android/app/src/main/res/layout/activity_add_products.xml
@@ -35,6 +35,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_existing_products"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
