--- a/android/app/src/main/res/layout/product_item.xml
+++ b/android/app/src/main/res/layout/product_item.xml
@@ -45,7 +45,7 @@
 
             <!-- TODO Define name -->
             <TextView
-                android:id="@+id/product_quant_wanted"
+                android:id="@+id/product_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
