--- a/android/app/src/main/res/layout/select_product_item.xml
+++ b/android/app/src/main/res/layout/select_product_item.xml
@@ -15,9 +15,9 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="16dp"
-        android:paddingTop="8dp"
+        android:paddingTop="10dp"
         android:paddingRight="16dp"
-        android:paddingBottom="8dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,7 +34,6 @@
             android:layout_marginStart="5dp"
             android:orientation="vertical">
 
-            <!-- TODO Define name -->
             <TextView
                 android:id="@+id/product_item_name"
                 android:layout_width="match_parent"
@@ -43,6 +42,15 @@
                 android:gravity="center_vertical"
                 android:textSize="18sp"
                 tools:text="ListItem" />
+
+            <TextView
+                android:id="@+id/product_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="12sp"
+                tools:text="Support Text"
+                tools:visibility="visible" />
 
         </LinearLayout>
 
