--- a/android/app/src/main/res/layout/select_product_item.xml
+++ b/android/app/src/main/res/layout/select_product_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true">
 
     <LinearLayout
         android:id="@+id/productItemLinearLayout"
@@ -41,6 +41,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 tools:text="ListItem" />
 
             <TextView
