--- a/android/app/src/main/res/menu/main_screen_menu.xml
+++ b/android/app/src/main/res/menu/main_screen_menu.xml
@@ -19,7 +19,7 @@
                 android:title="@string/insert_a_code"/>
 
             <item android:id="@+id/action_addListQR"
-                android:icon="@drawable/ic_qr"
+                android:icon="@drawable/baseline_qr_code_scanner_24"
                 android:onClick="addListWithQR"
                 android:title="@string/scan_qr_code"/>
         </menu>
