--- a/android/app/src/main/res/layout/list_item_store_product.xml
+++ b/android/app/src/main/res/layout/list_item_store_product.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/item_image"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
+                android:contentDescription="@string/product_image"
                 app:srcCompat="@drawable/ic_baseline_fastfood_24" />
 
             <LinearLayout
@@ -41,7 +42,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/product_item_name"
+                    android:id="@+id/storeProdName_tv"
                     android:layout_width="190dp"
                     android:layout_height="30dp"
                     android:layout_weight="1"
@@ -50,7 +51,7 @@
                     tools:text="ListItem" />
 
                 <TextView
-                    android:id="@+id/product_description"
+                    android:id="@+id/storeProdInfoText_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -63,15 +64,15 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/consume_bt"
+            android:id="@+id/addToCart_bt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/consume"
+            android:text="@string/add_to_cart"
             android:textSize="12sp" />
 
         <ImageButton
-            android:id="@+id/pantry_product_options_bt"
+            android:id="@+id/store_product_options_bt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
