--- a/android/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/android/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_pantry_lists"
         android:enabled="true"
-        android:title="@string/pantry"
+        android:title="@string/pantries"
         android:icon="@drawable/ic_home" />
-    <item android:id="@+id/action_shopping_lists"
+    <item android:id="@+id/action_store_lists"
         android:enabled="true"
-        android:title="@string/shopping"
+        android:title="@string/stores"
         android:icon="@drawable/ic_shopping_cart" />
 </menu>
