--- a/android/app/src/main/res/menu/options_pantry_store_product_menu.xml
+++ b/android/app/src/main/res/menu/options_pantry_store_product_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/pantry_product_options_delete"
+    <!-- TODO if needed, separate into more files -->
+    <item android:id="@+id/pantry_store_product_options_delete"
         android:title="@string/delete_product" />
 </menu>
