--- a/android/app/src/main/res/menu/pantry_screen_menu.xml
+++ b/android/app/src/main/res/menu/pantry_screen_menu.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/scan_product"
-        android:icon="@drawable/baseline_qr_code_scanner_24"
+        android:icon="@drawable/barcode_scan"
         android:onClick="scanProduct"
         android:title="@string/scan_product"
         app:showAsAction="ifRoom"/>
