--- a/android/app/src/main/res/layout/list_item_list_of_pantries.xml
+++ b/android/app/src/main/res/layout/list_item_list_of_pantries.xml
@@ -56,6 +56,7 @@
             android:id="@+id/list_options_bt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:background="@null"
             android:contentDescription="@string/list_options"
             android:src="@drawable/ic_baseline_more_vert_24"
