--- a/android/app/src/main/res/layout/dialog_pantry_product_details.xml
+++ b/android/app/src/main/res/layout/dialog_pantry_product_details.xml
@@ -19,8 +19,7 @@
             <ImageView
                 android:id="@+id/product_details_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_height="200dp"
                 android:src="@drawable/ic_baseline_fastfood_24"
                 >
             </ImageView>
