--- a/android/app/src/main/res/layout/dialog_product_creation.xml
+++ b/android/app/src/main/res/layout/dialog_product_creation.xml
@@ -13,8 +13,7 @@
         android:layout_height="146dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/product_image"
-        android:src="@drawable/ic_baseline_image_24"
-        android:visibility="gone"></ImageView>
+        android:src="@drawable/ic_baseline_image_24"></ImageView>
 
     <Button
         android:id="@+id/create_product_insert_image_button"
