Added map views and location wrappers and fixed converters for the location on the database

--- a/android/app/src/main/res/layout/dialog_create_pantry.xml
+++ b/android/app/src/main/res/layout/dialog_create_pantry.xml
@@ -34,6 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/pick_location" />
+        android:text="@string/pick_location"
+        android:visibility="visible"
+        tools:visibility="visible" />
 
 </LinearLayout>
