--- a/android/app/src/main/res/layout/dialog_create_store.xml
+++ b/android/app/src/main/res/layout/dialog_create_store.xml
@@ -17,6 +17,18 @@
         android:inputType="textPersonName"
         android:maxLines="1" />
 
+    <EditText
+        android:id="@+id/editText_storeDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="@string/description"
+        android:importantForAutofill="no"
+        android:inputType="textMultiLine"
+        android:textSize="14sp" />
+
     <Button
         android:id="@+id/button_pickLocation"
         android:layout_width="match_parent"
