--- a/android/app/src/main/res/menu/options_list_menu.xml
+++ b/android/app/src/main/res/menu/options_list_menu.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/list_options_delete"
         android:title="@string/delete_list" />
+    <item android:id="@+id/list_options_edit"
+        android:title="@string/edit_list" />
     <item android:id="@+id/list_options_sync"
         android:title="@string/sync_with_server"/>
     <item android:id="@+id/list_get_qr_code"
