--- a/android/app/src/main/res/layout/dialog_product_details.xml
+++ b/android/app/src/main/res/layout/dialog_product_details.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="50dp">
 
@@ -96,6 +96,78 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/scan_code" />
+
+        <RelativeLayout
+            android:id="@+id/product_details_rating_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/product_details_rating_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rate_this_product"
+                android:textSize="10pt" />
+
+            <RatingBar
+                android:id="@+id/product_details_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/product_details_rating_title"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                android:numStars="5"
+                android:stepSize="1.0" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/product_details_others_rating_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/product_details_others_rating_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/other_users_rated"
+                android:textSize="10pt"/>
+
+            <RatingBar
+                android:id="@+id/product_details_others_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/product_details_others_rating_title"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                android:secondaryProgressTint="#00000000"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:stepSize="0.1"/>
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/product_details_others_barchart_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.github.mikephil.charting.charts.HorizontalBarChart
+                android:id="@+id/product_details_others_barchart"
+                android:layout_width="match_parent"
+                android:layout_height="220dp" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 </ScrollView>
