--- a/android/app/src/main/res/menu/main_screen_menu.xml
+++ b/android/app/src/main/res/menu/main_screen_menu.xml
@@ -2,6 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/refresh_data"
+        android:title="@string/refresh_data"
+        app:showAsAction="ifRoom" />
+    <!--        TODO ADD ICON-->
+
+    <item
         android:id="@+id/action_addListOverflow"
         android:icon="@drawable/ic_add"
         android:title="@string/add_list"
