queue time and cache implemented

--- a/android/app/src/main/res/layout/activity_cart.xml
+++ b/android/app/src/main/res/layout/activity_cart.xml
@@ -38,27 +38,76 @@
         android:id="@+id/cart_prod_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/cart_total_cost"
+        app:layout_constraintBottom_toTopOf="@id/cartBottomLinear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cart_toolbar">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/cart_total_cost"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/cartBottomLinear"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/cartFinishShopping_bt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cart_prod_list"
-        tools:text="Total: 10.00 €" />
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/cartFinishShopping_bt">
+
+        <TextView
+            android:id="@+id/cart_total_cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cart_prod_list"
+            tools:text="Total: 10.00 €" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.6"
+            android:gravity="end"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/cart_queue_time_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:gravity="end"
+                android:layout_marginBottom="8dp"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/cart_queue_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_weight="0.6"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:gravity="end"
+                android:layout_marginBottom="8dp"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+
+
+
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/cartFinishShopping_bt"
